--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-2ce03103-b25e-4a4a-842d-cc680b6547a1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
