--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -8,16 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-2ce03103-b25e-4a4a-842d-cc680b6547a1;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TokenContext": "Server=(localdb)\\mssqllocaldb;Database=TokenContext-45a4be06-61cc-41cc-8817-8f600a10c6b3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TokenContext": "Server=(localdb)\\mssqllocaldb;Database=TokenContext-45a4be06-61cc-41cc-8817-8f600a10c6b3;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MetaDotaServerContext": "Server=(localdb)\\mssqllocaldb;Database=MetaDotaServerContext-3b486d55-52c4-42de-a4c4-40a7f8b9220b;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
-    //加密的key（SecretKey必须大于等于16位字符）
     "SecretKey": "12345678123456781234567812345678",
-    //token是谁颁发的
     "Issuer": "yuanjingpeng",
-    //过期时间
     "Expires": 10,
-    //token可以给哪些客户端使用
     "Audience": "client"
   }
 }
