--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -16,5 +16,11 @@
     "Issuer": "yuanjingpeng",
     "Expires": 10,
     "Audience": "client"
+  },
+  "Jwt2": {
+    "SecretKey": "12345678123456781234567812345678",
+    "Issuer": "yuanjingpeng2",
+    "Expires": 10,
+    "Audience": "client2"
   }
 }
