--- a/MetaDotaServer/MetaDotaServer.csproj
+++ b/MetaDotaServer/MetaDotaServer.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Swashbuckle" Version="5.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
