--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -7,10 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-2ce03103-b25e-4a4a-842d-cc680b6547a1;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TokenContext": "Server=(localdb)\\mssqllocaldb;Database=TokenContext-45a4be06-61cc-41cc-8817-8f600a10c6b3;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MetaDotaServerContext": "Server=(localdb)\\mssqllocaldb;Database=MetaDotaServerContext-3b486d55-52c4-42de-a4c4-40a7f8b9220b;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ClassContext": "Server=(localdb)\\mssqllocaldb;Database=ClassContext-a2b945f4-e58a-4874-a72b-1d2d501aae43;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TokenContext": "Server=DESKTOP-MLQQBCI;Database=TokenDB;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UserContext": "Server=DESKTOP-MLQQBCI;Database=UserDB;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "SecretKey": "12345678123456781234567812345678",
