--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -11,15 +11,21 @@
     "UserContext": "Server=DESKTOP-7HUO2FH\\SQLEXPRESS;Database=UserDB;User Id=yuanman;Password=yuanman;TrustServerCertificate=true"
   },
   "Jwt": {
-    "SecretKey": "12345678123456781234567812345678",
+    "SecretKey": "cdeggkhhsvnnjnhlnsctpavnvuocffds",
     "Issuer": "yuanjingpeng",
     "Expires": 10,
     "Audience": "client"
   },
   "Jwt2": {
-    "SecretKey": "12345678123456781234567812345678",
+    "SecretKey": "nszgkdhuqygrdzhqxajzcfohjrxdkdry",
     "Issuer": "yuanjingpeng2",
     "Expires": 10,
     "Audience": "client2"
+  },
+  "Email": {
+    "MyEmail": "664232289@qq.com",
+    "Password": "fylizhbtnhtzbaij",
+    "Smtp": "smtp.qq.com",
+    "Port": 465
   }
 }
