--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -22,6 +22,12 @@
     "Expires": 10,
     "Audience": "client2"
   },
+  "Jwt3": {
+    "SecretKey": "ecyuecmaoingliaxfkxvayiwehtgvzqz",
+    "Issuer": "yuanjingpeng3",
+    "Expires": 10,
+    "Audience": "client3"
+  },
   "Email": {
     "MyEmail": "664232289@qq.com",
     "Password": "fylizhbtnhtzbaij",
