--- a/MetaDotaServer/appsettings.json
+++ b/MetaDotaServer/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TokenContext": "Server=DESKTOP-7HUO2FH\\SQLEXPRESS;Database=TokenDB;User Id=yuanman;Password=yuanman;TrustServerCertificate=true",
-    "UserContext": "Server=DESKTOP-7HUO2FH\\SQLEXPRESS;Database=UserDB;User Id=yuanman;Password=yuanman;TrustServerCertificate=true"
+    "TokenContext": "Server=DESKTOP-MLQQBCI;Database=TokenDB;User Id=yuanman;Password=yuanman;TrustServerCertificate=true",
+    "UserContext": "Server=DESKTOP-MLQQBCI;Database=UserDB;User Id=yuanman;Password=yuanman;TrustServerCertificate=true"
   },
   "Jwt": {
     "SecretKey": "cdeggkhhsvnnjnhlnsctpavnvuocffds",
